--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task!</p>
-        <button class="btn">Add Task</button>
+        <button class="btn" id="save-task">Add Task</button>
     </header>
         <main class="page content">
             <section class="task-list-wrapper">
@@ -26,8 +26,8 @@
         <footer>
             &copy;2020 by Taskinator
         </footer>
-        
-    <script src="/assets/js/script.js"></script>    
+
+    <script src="./assets/js/script.js"></script>    
     
 </body>
 </html>
